--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body {
-  font-family: 'Comic Sans MS', 'Comic Sans', cursive;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
+    Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
 
 .App {
